--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Zabian Threatt - Portfolio</title>
-    <link rel="stylesheet" href="./style.css"/>
+    <script nonce="pMqwIJmdio6PYnTK" type="text/javascript" src="//self.adblockultimate.net/manager.js?tm=1749641912&amp;lg=true" guid="{CFF05BB0-BAB7-4F06-B437-36AFBC4B6413}" inwhitelist="false" status="true" autohide="true"></script><link rel="stylesheet" href="./style.css"/>
     <script src="./script.js"></script>
   </head>
   <body>
@@ -35,7 +35,7 @@
     <!-- About Me -->
     <section id="about-me" class="container">
       <div>
-        <img src="developer-8829706_1280.jpg" class="profile_image"/>
+        <img src="html_finalprojimages/developer-8829706_1280.jpg" class="profile_image"/>
       </div>
 
       <div>
